tests/fixtures/invalid/pow_str_str_int.py
# Cannot call pow() with Str, Str, Int
x = pow("hello", "hello", 1)
